[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Attack/Attack.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[node name="FrontAttack" type="Node2D"]
script = ExtResource( 1 )

[node name="HitArea" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="AnimationCooldown" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="timeout" from="AnimationCooldown" to="." method="_on_AnimationCooldown_timeout"]
